--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                 <div class="h2 animate-hidden">About Us</div>
             </div>
             <div class="row justify-content-center p-0 mt-2 mb-4">
-                <div class="col-12" style="height: auto;">
+                <div class="col-12 animate-hidden" style="height: auto;">
                     <img src="img/us.png" alt="" class="img-fluid" height="auto">
                 </div>
             </div>
